# cardcanvas-desktop

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_AND_INSTALLATION.md  DOCKERFILE_EXPLAINED.md  Dockerfile  GUIDE.md  LEARNING_GUIDE.md  README.md  docker-compose.yml  electron-builder.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  reset-password.mjs  test.js
.github/workflows/: build-desktop.yml
cardcanvas-backend/: Cargo.toml  README.md
cardcanvas-backend/migrations/: 20260524000000_sqlite_init.sql
cardcanvas-backend/src/: db.rs  lib.rs  main.rs  state.rs
cardcanvas-backend/src/domain/auth/: routes.rs  service.rs
cardcanvas-backend/src/domain/cards/: models.rs  repository.rs  routes.rs  service.rs
cardcanvas-backend/src/domain/media/: models.rs  repository.rs  routes.rs  service.rs
cardcanvas-backend/src/domain/whiteboards/: repository.rs  routes.rs  service.rs
cardcanvas-backend/src/domain/workspaces/: mod.rs  models.rs  repository.rs
cardcanvas-backend/src/infrastructure/: validation.rs
cardcanvas-backend/src/routes/: health.rs
cardcanvas-frontend/: README.md  package-lock.json  package.json
cardcanvas-frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
data/: cardboard.db-shm
electron/: build.js  main.js  preload.js
scripts/: backup.sh  deploy.sh
sleekly-backend/: Cargo.toml  README.md
sleekly-backend/.sqlx/: metadata.json
sleekly-frontend/: README.md  next.config.ts  package-lock.json  package.json
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+111 files in other folders)
